[package]
name = "station-emulator"
version = "0.1.0"
authors = ["romfrolov <justcallmefrolov@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
ws = "0.9.0"
url = "2.0.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
mio-extras = "2.0"
time = "0.1.39"
lazy_static = "1.4.0"
json = "*"
chrono = "0.4"
queues = "1.0.2"
